--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>AR4ALL</title>
+    <title>Get Your Filters</title>
 
     <!-- Bootstrap CSS -->
     <link
@@ -44,7 +44,7 @@
         class="navbar navbar-expand-lg navbar-dark bg-dark position-fixed fixed-top navigationmenu"
       >
         <div class="container py-2">
-          <a class="navbar-brand fw-bold" href="#">AR4ALL</a>
+          <a class="navbar-brand fw-bold" href="#">GET YOUR FILTERS</a>
           <button
             class="navbar-toggler"
             type="button"
