--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <section class="container py-5 px-lg-5 mt-lg-2 mt-xl-2 mt-xxl-2">
           <div class="row g-5 align-items-center">
             <div class="col-lg-6">
-              <h1 class="mb-4 title-text heading-text">
+              <h1 class="mb-4 title-text heading-text text-center text-lg-start text-xl-start text-xxl-start">
                 Unlocking Brand Potential: AR Filters for Agile Marketing
               </h1>
               <p
@@ -228,7 +228,7 @@
               </p>
 
               <div class="row g-4 mb-4">
-                <div class="col-sm-6">
+                <div class="d-none d-lg-block d-xl-block d-xxl-block col-sm-6 text-center">
                   <div
                     class="d-flex align-items-center border-start border-5 border-primary px-3"
                   >
@@ -246,7 +246,7 @@
                   </div>
                 </div>
 
-                <div class="col-sm-6">
+                <div class="d-none d-lg-block d-xl-block d-xxl-block col-sm-6 text-center">
                   <div
                     class="d-flex align-items-center border-start border-5 border-danger px-3"
                   >
