--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                   <h5 class="title-text fs-5">A Cool Cowboy Hat Filter</h5>
                 </div>
                 <div class="d-flex justify-content-center p-4">
-                  <button class="button-element py-1 px-5 rounded-4">
+                  <button class="button-element py-1 px-5 rounded-4" href="">
                     Try Now
                   </button>
                 </div>
@@ -569,7 +569,7 @@
                   <h5 class="title-text fs-5">Multicolor Fairy Wing Filter</h5>
                 </div>
                 <div class="d-flex justify-content-center p-4">
-                  <button class="button-element py-1 px-5 rounded-4">
+                  <button class="button-element py-1 px-5 rounded-4" onclick="location.href='https://www.instagram.com/ar/432992812655565/'">
                     Try Now
                   </button>
                 </div>
