--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                   <h5 class="title-text fs-5">A Cool Momo Gaming Filter</h5>
                 </div>
                 <div class="d-flex justify-content-center p-4">
-                  <button class="button-element py-1 px-5 rounded-4">
+                  <button class="button-element py-1 px-5 rounded-4"  onclick="location.href='https://www.instagram.com/ar/7329972677039957/'">
                     Try Now
                   </button>
                 </div>
@@ -527,7 +527,7 @@
                   <h5 class="title-text fs-5">A Cool Cowboy Hat Filter</h5>
                 </div>
                 <div class="d-flex justify-content-center p-4">
-                  <button class="button-element py-1 px-5 rounded-4" href="">
+                  <button class="button-element py-1 px-5 rounded-4">
                     Try Now
                   </button>
                 </div>
