--- a/index.html
+++ b/index.html
@@ -127,21 +127,21 @@
               autoplay
               loop
               muted
-              height="480"
+              height="475"
             ></video>
             <video
               src="img/carouselvids/11.mp4"
               autoplay
               loop
               muted
-              height="480"
+              height="475"
             ></video>
             <video
               src="img/carouselvids/9.mp4"
               autoplay
               loop
               muted
-              height="480"
+              height="475"
             ></video>
           </div>
         </div>
@@ -161,10 +161,10 @@
               <p
                 class="mb-4 text-center text-lg-start text-xl-start text-xxl-start"
               >
-                AR revolutionizes marketing with vivid visuals, boosting memory
-                recall by 70%. It outshines mobile video, offering creative
-                tools and filters for virtual product trials, fostering brand
-                identities globally.
+                Experience the Marketing Revolution: AR Elevates Engagement with
+                Stunning Visuals, Enhancing Memory Recall by 70%. Say Goodbye to
+                Traditional Mobile Video – Embrace AR's Creative Filters and
+                Virtual Product Trials, Crafting Global Brand Identities.
               </p>
               <div class="skill mb-4">
                 <div class="d-flex justify-content-between">
@@ -506,7 +506,10 @@
                   <h5 class="title-text fs-5">A Cool Momo Gaming Filter</h5>
                 </div>
                 <div class="d-flex justify-content-center p-4">
-                  <button class="button-element py-1 px-5 rounded-4"  onclick="location.href='https://www.instagram.com/ar/7329972677039957/'">
+                  <button
+                    class="button-element py-1 px-5 rounded-4"
+                    onclick="location.href='https://www.instagram.com/ar/7329972677039957/'"
+                  >
                     Try Now
                   </button>
                 </div>
@@ -524,10 +527,10 @@
                     src="img/ourfilter/filter01.png"
                     alt=""
                   />
-                  <h5 class="title-text fs-5">A Cool Cowboy Hat Filter</h5>
+                  <h5 class="title-text fs-5">An Awesome Face Tatoo Filter</h5>
                 </div>
                 <div class="d-flex justify-content-center p-4">
-                  <button class="button-element py-1 px-5 rounded-4">
+                  <button class="button-element py-1 px-5 rounded-4" onclick="location.href='https://www.instagram.com/ar/992708938360186/'">
                     Try Now
                   </button>
                 </div>
@@ -545,10 +548,10 @@
                     src="img/ourfilter/filter01.png"
                     alt=""
                   />
-                  <h5 class="title-text fs-5">An Aesthetic Glass Filter</h5>
+                  <h5 class="title-text fs-5">An Aesthetic Photo Frame Filter</h5>
                 </div>
                 <div class="d-flex justify-content-center p-4">
-                  <button class="button-element py-1 px-5 rounded-4">
+                  <button class="button-element py-1 px-5 rounded-4" onclick="location.href='https://www.instagram.com/ar/1172039917145518/'">
                     Try Now
                   </button>
                 </div>
@@ -569,7 +572,10 @@
                   <h5 class="title-text fs-5">Multicolor Fairy Wing Filter</h5>
                 </div>
                 <div class="d-flex justify-content-center p-4">
-                  <button class="button-element py-1 px-5 rounded-4" onclick="location.href='https://www.instagram.com/ar/432992812655565/'">
+                  <button
+                    class="button-element py-1 px-5 rounded-4"
+                    onclick="location.href='https://www.instagram.com/ar/432992812655565/'"
+                  >
                     Try Now
                   </button>
                 </div>
