"About Us Page"

--- a/index.html
+++ b/index.html
@@ -1197,7 +1197,7 @@
               class="col-md-6 col-lg-4 text-white d-flex flex-column justify-content-start align-items-start"
             >
               <h4 class="text-white mb-4">Quick Links</h4>
-              <a class="btn btn-link text-white" href="">About Us</a>
+              <a class="btn btn-link text-white" href="./about/">About Us</a>
 
               <a class="btn btn-link text-white" href="">Privacy Policy</a>
               <a class="btn btn-link text-white" href="">Terms & Condition</a>
