"about us changes"

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               <h1
                 class="mb-5 heading-text title-text text-center text-lg-start text-xl-start text-xxl-start"
               >
-                AR's 70% Memory Boost Unmatched Recall Power for Your Content
+                AR elevates Brand Recall by 70%
               </h1>
               <p
                 class="mb-4 text-center text-lg-start text-xl-start text-xxl-start"
@@ -530,7 +530,10 @@
                   <h5 class="title-text fs-5">An Awesome Face Tatoo Filter</h5>
                 </div>
                 <div class="d-flex justify-content-center p-4">
-                  <button class="button-element py-1 px-5 rounded-4" onclick="location.href='https://www.instagram.com/ar/992708938360186/'">
+                  <button
+                    class="button-element py-1 px-5 rounded-4"
+                    onclick="location.href='https://www.instagram.com/ar/992708938360186/'"
+                  >
                     Try Now
                   </button>
                 </div>
@@ -548,10 +551,15 @@
                     src="img/ourfilter/filter01.png"
                     alt=""
                   />
-                  <h5 class="title-text fs-5">An Aesthetic Photo Frame Filter</h5>
+                  <h5 class="title-text fs-5">
+                    An Aesthetic Photo Frame Filter
+                  </h5>
                 </div>
                 <div class="d-flex justify-content-center p-4">
-                  <button class="button-element py-1 px-5 rounded-4" onclick="location.href='https://www.instagram.com/ar/1172039917145518/'">
+                  <button
+                    class="button-element py-1 px-5 rounded-4"
+                    onclick="location.href='https://www.instagram.com/ar/1172039917145518/'"
+                  >
                     Try Now
                   </button>
                 </div>
