--- a/about/index.html
+++ b/about/index.html
@@ -44,7 +44,7 @@
         class="navbar navbar-expand-lg navbar-dark bg-dark position-fixed fixed-top navigationmenu"
       >
         <div class="container py-2">
-          <a class="navbar-brand fw-bold" href="#">AUGMENT YOGI</a>
+          <a class="navbar-brand fw-bold" href="/">AUGMENT YOGI</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -217,6 +217,13 @@ Join us in embracing the future of marketing through augmented reality. Discover
 <!-- JavaScript Libraries -->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="../lib/wow/wow.min.js"></script>
+<script src="../lib/easing/easing.min.js"></script>
+<script src="../lib/waypoints/waypoints.min.js"></script>
+<script src="../lib/counterup/counterup.min.js"></script>
+<!-- <script src="../lib/owlcarousel/owl.carousel.min.js"></script> -->
+
+<!-- Template Javascript -->
 <script src="../js/main.js"></script>
 
 </body>
